--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <FrameLayout
+        android:layout_above="@id/bottom_nav"
         android:id="@+id/container_nav"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
@@ -12,7 +13,9 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
+        app:labelVisibilityMode="labeled"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        app:itemIconSize="26sp"
         app:menu="@menu/menu_bottom_nav" />
 </RelativeLayout>
