--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,53 @@
             app:titleTextColor="@color/white" />
 
     </com.google.android.material.appbar.AppBarLayout>
+    <LinearLayout
+        android:id="@+id/bluetooth_enable"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        tools:visibility="gone">
+
+        <TextView
+            android:textColor="@color/black"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_weight="0.7"
+            android:text="@string/main_activity_bluetooth_adapter_disabled" />
+
+        <Button
+            android:id="@+id/bluetooth_enable_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_weight="0.3"
+            android:text="@string/main_activity_enable_button" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/location_enable"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:visibility="gone">
+
+        <TextView
+            android:textColor="@color/black"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_weight="0.7"
+            android:text="@string/main_activity_location_adapter_disabled" />
+
+        <Button
+            android:id="@+id/location_enable_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:layout_weight="0.3"
+            android:text="@string/main_activity_enable_button" />
+    </LinearLayout>
     <FrameLayout
         android:id="@+id/container_main"
         android:layout_width="match_parent"
