--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,17 +5,17 @@
     android:layout_height="match_parent">
 
     <FrameLayout
-        android:layout_above="@id/bottom_nav"
-        android:id="@+id/container_nav"
+        android:layout_above="@id/bottom_nav_main"
+        android:id="@+id/container_nav_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_nav"
+        android:id="@+id/bottom_nav_main"
         android:layout_width="match_parent"
         app:labelVisibilityMode="labeled"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:itemIconSize="26sp"
-        app:menu="@menu/menu_bottom_nav" />
+        app:menu="@menu/menu_bottom_nav_main" />
 </RelativeLayout>
