--- a/app/src/main/res/menu/menu_bottom_nav_network.xml
+++ b/app/src/main/res/menu/menu_bottom_nav_network.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/nav_item_network"
+        android:id="@+id/nav_item_groups"
         android:icon="@drawable/icon_mesh"
-        android:title="@string/nav_item_network" />
+        android:title="@string/nav_item_groups" />
     <item
-        android:id="@+id/nav_item_scan"
+        android:id="@+id/nav_item_nodes"
         android:icon="@drawable/icon_scan"
-        android:title="@string/nav_item_scan" />
+        android:title="@string/nav_item_nodes" />
 </menu>
