--- a/app/src/main/res/layout/item_network.xml
+++ b/app/src/main/res/layout/item_network.xml
@@ -37,7 +37,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Demo Network"
-                    android:textColor="@color/primary_red"
+                    android:textColor="@color/primary_color"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
