--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".presentation.main.MainActivity">
+
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
@@ -25,6 +26,7 @@
             app:titleTextColor="@color/white" />
 
     </com.google.android.material.appbar.AppBarLayout>
+
     <LinearLayout
         android:id="@+id/bluetooth_enable"
         android:layout_width="match_parent"
@@ -33,12 +35,12 @@
         tools:visibility="gone">
 
         <TextView
-            android:textColor="@color/black"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_weight="0.7"
-            android:text="@string/main_activity_bluetooth_adapter_disabled" />
+            android:text="@string/main_activity_bluetooth_adapter_disabled"
+            android:textColor="@color/black" />
 
         <Button
             android:id="@+id/bluetooth_enable_btn"
@@ -46,7 +48,8 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_weight="0.3"
-            android:text="@string/main_activity_enable_button" />
+            android:text="@string/main_activity_enable_button"
+            android:textAllCaps="false" />
     </LinearLayout>
 
     <LinearLayout
@@ -57,12 +60,12 @@
         android:visibility="gone">
 
         <TextView
-            android:textColor="@color/black"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_weight="0.7"
-            android:text="@string/main_activity_location_adapter_disabled" />
+            android:text="@string/main_activity_location_adapter_disabled"
+            android:textColor="@color/black" />
 
         <Button
             android:id="@+id/location_enable_btn"
@@ -70,8 +73,10 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
             android:layout_weight="0.3"
-            android:text="@string/main_activity_enable_button" />
+            android:text="@string/main_activity_enable_button"
+            android:textAllCaps="false" />
     </LinearLayout>
+
     <FrameLayout
         android:id="@+id/container_main"
         android:layout_width="match_parent"
