--- a/app/src/main/res/layout/fragment_node_config.xml
+++ b/app/src/main/res/layout/fragment_node_config.xml
@@ -1,9 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:text="NODE CONFIG"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-</RelativeLayout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp">
+
+        <TextView
+            android:textStyle="bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toStartOf="@id/tv_low_power_support"
+            android:text="@string/fragment_node_config_lpn"
+            android:textColor="@color/primary_color"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/tv_low_power_support"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:text="@string/fragment_node_config_lpn_no_supported"
+            android:textColor="@color/red_500"
+            android:textSize="14sp" />
+    </RelativeLayout>
+
+    <Switch
+        android:textStyle="bold"
+        android:id="@+id/sw_proxy"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:text="@string/fragment_node_config_proxy"
+        android:textColor="@color/primary_color"
+        android:textSize="16sp" />
+
+    <Switch
+        android:textStyle="bold"
+        android:id="@+id/sw_relay"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:text="@string/fragment_node_config_relay"
+        android:textColor="@color/primary_color"
+        android:textSize="16sp" />
+
+    <Switch
+        android:textStyle="bold"
+        android:id="@+id/sw_friend"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:text="@string/fragment_node_config_friend"
+        android:textColor="@color/primary_color"
+        android:textSize="16sp" />
+
+    <Switch
+        android:textStyle="bold"
+        android:id="@+id/sw_retransmission"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:text="@string/fragment_node_config_retransmission"
+        android:textSize="12sp"
+        android:visibility="gone" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="15dp">
+
+        <TextView
+            android:textStyle="bold"
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/fragment_node_config_group"
+            android:textColor="@color/primary_color"
+            android:textSize="16sp" />
+
+        <Spinner
+            android:id="@+id/spinner_group"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="15dp">
+
+        <TextView
+            android:textStyle="bold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/fragment_node_config_functionality"
+            android:textColor="@color/primary_color"
+            android:textSize="16sp" />
+
+        <Spinner
+            android:id="@+id/spinner_functionality"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp" />
+    </LinearLayout>
+</LinearLayout>
